--- a/_config.yml
+++ b/_config.yml
@@ -13,13 +13,13 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Director of Advancement Services
+title: Dan's CSCI 340 Blog
 email: turner@hendrix.edu
 description: >- # this means to ignore newlines until "baseurl:"
   Dan's CSCI 340 Blog
 baseurl: "/csci340blog" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: 
+twitter_username:
 github_username:  Danny-Turner
 
 # Build settings
